Mon Sep 27 12:56:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/RepositoryManager.mpc:
        * DAnCE/Config_Handlers/Config_Handlers.mpc:
          Instead of adding all xerces stuff to the project itself, inherit
          from the new xerces base project

Mon Sep 27 12:02:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/NodeDaemon.mpc:
          Instead of adding ifr_client to libs, use the
          corresponding base projects

Mon Sep 27 11:54:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Config_Handlers.mpc:
        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc:
        * DAnCE/ExecutionManager/ExecutionManager.mpc:
          Instead of adding the valuetype and ifr_client to libs, use the
          corresponding base projects

Mon Sep 27 08:54:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/examples/BasicSP/EC/EC_exec.cpp:
          Added missing ACE_TRY_CHECK

Mon Sep 27 08:03:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_Base.cpp:
          Use false instead of FALSE.

Wed Sep 22 17:46:14 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Removed unused parameter identifiers and fixed the order of some
          class member initializations.

Tue Sep 21 13:28:40 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/value_factory_registration.html:

          New documentation file, describing the behavior of the CIDL
          compiler with respect to automatic generation of code to
          register valuetype factories for eventtypes referenced by
          'consumes' declarations in a component.

Tue Sep 21 13:04:39 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
